Thu Dec  7 00:08:53 1995  Karl Fogel  <kfogel@floss.cyclic.com>

        * client.c (connect_to_pserver): when printing out "unrecognized
        response", also print out the offending response.

        * server.c (check_password): take `repository' arg too now.
        Call check_repository_password() before checking /etc/passwd.
        (check_repository_password): new func.

        * options.h.in (CVS_PASSWORDS_CASE_INSENSITIVE): new define, unset
        by default.
        
Wed Dec  6 18:51:16 1995  Karl Fogel  <kfogel@floss.cyclic.com>

        * server.c (check_password): If user has a null password, then
        return 1 if arg is also null.
        Reverse sense of return value.  Caller changed.
        
Wed Dec  6 14:42:57 1995  Karl Fogel  <kfogel@floss.cyclic.com>

        * server.c (check_password): new func.
        (authenticate_connection): call above new func.

        * login.c (login): use construct_cvspass_filename().
        If CVSroot is not "fully-qualified", then insist the user qualify
        it before going on.
        (get_cvs_password): fleshed out.  Now reads from ~/.cvspass, or
        prompts if no appropriate password found.
        (construct_cvspass_filename): new func.

        * server.c (authenticate_connection): send ACK or NACK to client.

        * client.c (connect_to_pserver): check for ACK vs NACK response
        from server after sending authorization request.

        * login.c (get_cvs_password): new func.

        * client.c (connect_to_pserver): use new func get_cvs_password().
        Prototype it at top of file.  Hmmm.
        
Wed Dec  6 13:29:22 1995  Karl Fogel  <kfogel@floss.cyclic.com>

        * server.c: same as below (AUTH_SERVER_SUPPORT).

        * main.c: same as below (AUTH_SERVER_SUPPORT where appropriate).

        * login.c: same same as below.

        * cvs.h: same as below.

        * client.c: use AUTH_CLIENT_SUPPORT, not CVS_LOGIN.
