@@ -1,5 +1,8 @@
 Thu Dec  7 00:08:53 1995  Karl Fogel  <kfogel@floss.cyclic.com>
 
+        * server.c (authenticate_connection): document server's side of
+        the Authentication Protocol too.
+
         * client.c (connect_to_pserver): when printing out "unrecognized
         response", also print out the offending response.
 
